--- a/ElementsOfStyle.tex
+++ b/ElementsOfStyle.tex
@@ -51,7 +51,7 @@ The reader does not necessarily know or remember what ``Theorem 2.13'' is. Even 
 In most proofs you will want to refer to an earlier definition, problem, theorem, corollary, or lemma.  In this case, you should reference the statement by number, but it is also helpful to the reader to summarize the statement you are citing.  For example, you might write something like, ``By Theorem~2.3, the sum of two consecutive integers is odd, and so\ldots."
 
 \item \textbf{Use English words.}
-Although there will usually be equations or mathematical statements in your proofs, use English sentences to connect them and display their logical relationships. If you at proofs in textbooks and research papers, you will see that they consist mostly of English words.
+Although there will usually be equations or mathematical statements in your proofs, use English sentences to connect them and display their logical relationships. If you look at proofs in textbooks and research papers, you will see that they consist mostly of English words.
 
 \item \textbf{Use complete sentences.}
 If you wrote a history essay in sentence fragments, the reader would not understand what you meant; likewise in mathematics you must use complete sentences, with verbs, to convey your logical train of thought.
@@ -59,7 +59,7 @@ If you wrote a history essay in sentence fragments, the reader would not underst
 Some complete sentences can be written purely in mathematical symbols, such as equations (e.g., $a^3=b^{-1}$), inequalities (e.g., $x<5$), and other relations (like $5\big|10$ or $7\in\mathbb{Z}$). These statements usually express a relationship between two mathematical \emph{objects}, like numbers or sets.  However, it is considered bad style to begin a sentence with symbols.  A common phrase to use to avoid starting a sentence with mathematical symbols is ``We see that...''.
 
 \item \textbf{Show the logical connections among your sentences.}
-Use phrases like ``Therefore'', ``Thus", ``Hence", ``Then", ``since", ``because'', ``if\ldots, then\ldots'', or ``if and only if'' to connect your sentences.
+Use phrases like ``Therefore'', ``Thus'', ``Hence'', ``Then'', ``since'', ``because'', ``if\ldots, then\ldots'', or ``if and only if'' to connect your sentences.
   
 \item \textbf{Know the difference between statements and objects.}
 A mathematical object is a \emph{thing}, a noun, such as a set, an element, a number, an ordered pair, a vector space, etc. Objects either exist or do not exist. Statements, on the other hand, are mathematical \emph{sentences}:  they are either true or false.
@@ -129,7 +129,7 @@ If you use the letter ``$k$,'' the reader should know exactly what $k$ is. Good 
 \item \textbf{Use appropriate quantifiers (once).}
 When you introduce a variable $x\in S$, it must be clear to your reader whether you mean ``for all $x\in S$'' or just ``for some $x\in S$.'' If you just say something like ``$y=x^2$ where $x\in S$,'' the word ``where'' does not indicate whether you mean ``for all'' or ``some''.
         
-Phrases indicating the quantifier ``for all'' include ``Let $x\in S$''; ``for all $x\in S$''; ``for every $x\in S$''; ``for each $x\in S$''; etc. Phrases indicating the quantifier ``some'' or ``there exists'') include ``for some $x\in S$''; ``there exists an $x\in S$''; ``for a suitable choice of $x\in S$''; etc.
+Phrases indicating the quantifier ``for all'' include ``Let $x\in S$''; ``for all $x\in S$''; ``for every $x\in S$''; ``for each $x\in S$''; etc. Phrases indicating the quantifier ``some'' or ``there exists'' include ``for some $x\in S$''; ``there exists an $x\in S$''; ``for a suitable choice of $x\in S$''; etc.
 
 Once you have said ``Let $x\in S$,'' the letter $x$ has its meaning defined. You do not need to say ``for all $x\in S$'' again, and you definitely should \emph{not} say ``let $x\in S$'' again.
 
